test/arrays/diten/forallArrayTypeVar.good
forallArrayTypeVar.chpl:1: syntax error: syntax error near ';'
